fix layout shift caused by 100vw

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url('/images/hero-bg.jpg');
   background-size: cover;
